[package]
name = "TTWServer"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.5.0", features = ["full"] }
tokio = { version = "1.4.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
serde = "1.0.213"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
futures = "0.3.31"
pin-project-lite = "0.2.4"
http-body-util = "0.1.2"
http-body = "1"
http = "1.1.0"